crates/forge_main/src/markdown_stream/snapshots/forge_main__markdown_stream__table__tests__special_characters.snap
---
source: crates/forge_main/src/markdown_stream/table.rs
expression: "render(vec![vec![\"Symbol\", \"Meaning\"], vec![\"<\", \"less than\"],\nvec![\">\", \"greater than\"], vec![\"&\", \"ampersand\"], vec![\"\\\"\", \"quote\"],])"
---
  ┌────────┬──────────────┐
  │ Symbol │ Meaning      │
  ├────────┼──────────────┤
  │ <      │ less than    │
  ├────────┼──────────────┤
  │ >      │ greater than │
  ├────────┼──────────────┤
  │ &      │ ampersand    │
  ├────────┼──────────────┤
  │ "      │ quote        │
  └────────┴──────────────┘
