crates/forge_main/src/markdown_stream/snapshots/forge_main__markdown_stream__table__tests__three_columns.snap
---
source: crates/forge_main/src/markdown_stream/table.rs
expression: "render(vec![vec![\"A\", \"B\", \"C\"], vec![\"1\", \"2\", \"3\"], vec![\"x\", \"y\", \"z\"],])"
---
  ┌───┬───┬───┐
  │ A │ B │ C │
  ├───┼───┼───┤
  │ 1 │ 2 │ 3 │
  ├───┼───┼───┤
  │ x │ y │ z │
  └───┴───┴───┘
