crates/forge_main/src/markdown_stream/snapshots/forge_main__markdown_stream__table__tests__uneven_row_lengths.snap
---
source: crates/forge_main/src/markdown_stream/table.rs
expression: "render(vec![vec![\"A\", \"B\", \"C\"], vec![\"1\", \"2\"], vec![\"x\"],])"
---
  ┌───┬───┬───┐
  │ A │ B │ C │
  ├───┼───┼───┤
  │ 1 │ 2 │   │
  ├───┼───┼───┤
  │ x │   │   │
  └───┴───┴───┘
