crates/forge_main/src/markdown_stream/snapshots/forge_main__markdown_stream__table__tests__unicode_content.snap
---
source: crates/forge_main/src/markdown_stream/table.rs
expression: "render(vec![vec![\"名前\", \"年齢\"], vec![\"田中\", \"25\"],])"
---
  ┌──────┬──────┐
  │ 名前 │ 年齢 │
  ├──────┼──────┤
  │ 田中 │ 25   │
  └──────┴──────┘
