crates/forge_main/src/markdown_stream/snapshots/forge_main__markdown_stream__table__tests__varying_column_widths.snap
---
source: crates/forge_main/src/markdown_stream/table.rs
expression: "render(vec![vec![\"Short\", \"Much Longer Header\"], vec![\"a\", \"b\"],])"
---
  ┌───────┬────────────────────┐
  │ Short │ Much Longer Header │
  ├───────┼────────────────────┤
  │ a     │ b                  │
  └───────┴────────────────────┘
