crates/forge_main/src/markdown_stream/snapshots/forge_main__markdown_stream__table__tests__whitespace_content.snap
---
source: crates/forge_main/src/markdown_stream/table.rs
expression: "render(vec![vec![\"Header\", \"Value\"], vec![\"  spaces  \", \"   \"],])"
---
  ┌────────────┬───────┐
  │ Header     │ Value │
  ├────────────┼───────┤
  │   spaces   │       │
  └────────────┴───────┘
