crates/forge_main/src/markdown_stream/snapshots/forge_main__markdown_stream__table__tests__wide_table_many_columns.snap
---
source: crates/forge_main/src/markdown_stream/table.rs
expression: "render(vec![vec![\"A\", \"B\", \"C\", \"D\", \"E\", \"F\"],\nvec![\"1\", \"2\", \"3\", \"4\", \"5\", \"6\"],])"
---
  ┌───┬───┬───┬───┬───┬───┐
  │ A │ B │ C │ D │ E │ F │
  ├───┼───┼───┼───┼───┼───┤
  │ 1 │ 2 │ 3 │ 4 │ 5 │ 6 │
  └───┴───┴───┴───┴───┴───┘
